[package]
name = "zfs-autosnap"
authors = ["David Kleingeld"]
version = "0.2.0"
edition = "2024"

homepage = "https://github.com/rollcat/zfs-autosnap"
repository = "https://github.com/rollcat/zfs-autosnap.git"

readme = "README.md"
license = "MIT"

description = "Automatic ZFS snapshot utility"
keywords = ["zfs", "cli", "automatic", "snapshot"]
categories = ["command-line-utilities"]

[dependencies]
byte-unit = "4"
chrono = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
itertools = "0.14.0"
service-install = "0.5.6"
subprocess = "0.2"
